Add distance util (performance)